Ensure expanded side panel does not overlap form content for most viewports
- Set the side panel width custom property ('--side-panel-width') globally, not just on the form container.
- Use this custom property to determine the max width of the form content.
- Fixes #11038

--- a/client/scss/components/forms/_form-width.scss
+++ b/client/scss/components/forms/_form-width.scss
@@ -3,16 +3,26 @@
 }
 
 @include media-breakpoint-up(md) {
-  .side-panel-open,
   .minimap-open {
     .tab-content {
-      width: theme('width.[2/3]');
+      width: theme('width.[4/5]');
+    }
+  }
+
+  .side-panel-open {
+    .tab-content {
+      // Account for dynamic width of the side panel when open.
+      width: max(theme('width.[1/3]'), calc(100% - var(--side-panel-width)));
     }
   }
 
   .side-panel-open.minimap-open {
     .tab-content {
-      width: theme('width.[3/5]');
+      // Account for additional space taken up by the minimap.
+      width: max(
+        theme('width.[2/5]'),
+        calc(100% - var(--side-panel-width) - 15rem)
+      );
     }
   }
 }
